<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!--android:background="@color/fondo"-->


    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="510dp"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_mensaje_1"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text=""
            android:textSize="15dp" />

        <EditText
            android:id="@+id/eTcioperador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Ci_operador"
            android:inputType="number" />

        <EditText
            android:id="@+id/eTNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/eTApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_apellido"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/eTTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_celular"
            android:inputType="text|phone" />

        <EditText
            android:id="@+id/eTCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/eTPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_contrasena"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/eTPassC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_contrasena2"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/eTTipo_operador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Tipo_operador"
            android:inputType="text" />

        <!--     <EditText
            android:id="@+id/eTNombre_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nombre_ubicacion"
            android:inputType="text" />
-->
        <Button
            android:id="@+id/btnCrearOperador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register_btnEnviarDatos" />

        <TextView
            android:id="@+id/tVmensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>