<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Monedero.MonederoFragment">

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="150dp"
        android:gravity="right|top"
        android:lineSpacingExtra="9sp"
        android:textAlignment="center"
        android:textAppearance="@style/luis_ramire"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/rectangle_1"
        android:elevation="19dp" />

    <TextView
        android:id="@+id/monedero"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="28dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="right|top"
        android:lineSpacingExtra="9sp"
        android:text="@string/monedero"
        android:translationY="-4.28sp" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="77dp"
        android:layout_height="24dp"
        android:layout_marginLeft="268dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="238dp"
        android:textAppearance="@style/some_id"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.62sp"
        android:gravity="right|top"
        android:layout_alignParentStart="true"
        android:layout_marginStart="268dp"
        android:layout_alignParentLeft="true" />

    <View
        android:id="@+id/receive_tra"
        android:layout_width="327dp"
        android:layout_height="91dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:background="#00000000"
        />

    <TextView
        android:id="@+id/tarjeta"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="228dp"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        android:translationY="-2.4sp" />

    <TextView
        android:id="@+id/total_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="255dp"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/total_trans"
        android:textAppearance="@style/total_trans"
        android:translationY="-1.8sp" />





    <TextView
        android:id="@+id/text_monedero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="741dp"
        android:text="@string/hello_blank_fragment" />

    <View
        android:id="@+id/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:background="@drawable/ic_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylcerViewTransac"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        />

</FrameLayout>